fix overflow with animation

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -8,6 +8,7 @@
   width: 100vw;
   min-width: 300px;
   background-color: v.$color-navy;
+  overflow-x: hidden;
 
   .sidebar {
     display: flex;
